# rust-training

./: .gitignore  Cargo.toml
Project1/src/: lib.rs
Project2/: Cargo.toml
Project2/src/: lib.rs
file/: Cargo.toml
file/src/: lib.rs
src/: lib.rs
tools/src/: lib.rs
