[package]
name = "kvs"
version = "0.1.0"
authors = ["Qi <295872776@qq.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
structopt = "0.2.16"
failure = "0.1.5"
serde = "1.0.92"
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
float-cmp = "=0.4.0" # FIXME: https://github.com/assert-rs/predicates-rs/issues/78
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"